<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">考试一点通</string>
    <string name="app_name_suffix">(全国版)</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernamelab">账 号:</string>
    <string name="passwordlab">密 码:</string>
    <string name="rememberpwd">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">在线登录</string>
    <string name="local_login">本地登录</string>
    <string name="register">免费注册</string>
    <string name="loginStr">此注册帐号在本系列软件中通用</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="pwdHint">请输入至少6位密码</string>
    <string name="pwd2Hint">请再输入一次</string>
    <string name="nameHint">请输入真实姓名</string>
    <string name="emailHint">请输入真实姓名</string>
    <string name="phonenumHint">请输入本人手机号码</string>
    <string name="register2">立 即 注 册</string>
    <string name="chapter">章节练习</string>
    <string name="simulate">模拟考场</string>
    <string name="examGuide">考试指南</string>
    <string name="everydayKnowledge">每日知识</string>
    <string name="communication">交流圈</string>
    <string name="randomExer">随机练习</string>
    <string name="myNotebook">我的笔记</string>
    <string name="fastExer">快速练习</string>
    <string name="myFavor">我的收藏</string>
    <string name="errorRedo">错题重做</string>
    <string name="learnRecord">学习记录</string>
    <string name="other">考试指南</string>

    <!-- sliding menu -->
    <string name="homepage">首页</string>
    <string name="registerOrLogin">注册登录</string>
    <string name="aboutus">关于</string>
    <string name="setting">设置</string>
    <string name="exit">注销</string>
    <!-- set exam time -->
    <string name="setExamTime">考试时间</string>
    <string name="setTimeOk">确定</string>
    <string name="setDate">考试日期:</string>
    <string name="restTime">距离考试仅剩:</string>
    <string name="restTime1">距离</string>
    <string name="restTime2">考试仅剩:</string>
    <string name="restTime3">的考试仅剩:</string>
    <string name="nonedata">亲,木有数据</string>
    <string name="connect_error">亲,网速不给力</string>
    <string name="loadingStr2">玩命加载中</string>
    <!-- <string name=""></string> -->
	
    <string name="exam_myAnswerStr">我的回答：</string>
    <string name="exam_sysAnswerStr">正确答案：</string>
    <string name="exam_analysisStr">答案解析: </string>
    <string name="submitStr2">确 认 提 交</string>
    <string name="exam_exitBtnStr">退 出 考 试</string>
    <string name="exam_exitSubmitBtnStr">提 交 试 卷</string>
    <string name="exam_exitCancelStr">取     消</string>
    <string name="question_directory_btn1Str">查看题目</string>
    <string name="question_directory_btn2Str">再做一次</string>
    <string name="question_doAgain">重做</string>
    <string name="question_notebook">查看题目</string>
    <string name="question_directoryStr2">做题情况</string>
    <string name="question_directoryStr">题目列表</string>
    <string name="question_directoryTitleStr">答题目录</string>
    <string name="exam_selectStr">选 题</string>
    <string name="chapter_exercise">练习</string>
    <string name="setting_date_edit">考试日期设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_checkupdate">检测新版本</string>
    <string name="setting_checkupdata">检测题库更新</string>
    <string name="new_str"> new </string>
    <string name="setting_checkupdate_when_start">启动时检查新版本</string>
    <string name="setting_share">分享好友</string>
    <string name="setting_screen_light">屏幕亮度</string>
    <string name="autoAdjust">自动调节</string>
    <string name="setting_website">访问主站</string>
    <string name="setting_clearcache">清除缓存</string>
    <string name="setting_deal">隐私协议</string>
    <string name="setting_aboutapp">关于应用</string>
    <string name="setting_sync">同步</string>
    <string name="setting_logout">注销登录</string>
    <string name="setting_login">注册登录</string>
    <string name="setting_logout_2">退出当前帐号</string>

    <string name="user_qq_login_text">使用QQ帐号登录</string>
    <string name="user_sina_login_text">使用新浪微博帐号登录</string>
    
    <!-- Exception -->
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="xml_parser_failed">数据解析异常</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="http_status_code_error">网络异常，错误码：%d</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="json_parser_failed">数据解析异常</string>

    <!-- 发送错误报告 -->
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="submit_report">提交报告</string>
    <!-- 退出dialog -->
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="app_setting_surelogout">确定要退出登录吗?</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="msg_load_image_fail">图片加载失败</string>
    <string name="msg_load_userface_fail">用户头像加载失败</string>
    <string name="msg_login_success">登录成功</string>
    <string name="msg_login_fail">登录失败</string>
    <string name="msg_login_error">用户未登录 或 密码错误</string>
    <!-- 改变头像 -->
    <string name="img_from_camera">手机拍照</string>
    <string name="img_from_album">手机相册</string>
    <string name="img_cancel_choose">取消</string>
    <string name="postTween">发表新帖</string>
    <string name="postDetail">帖子详情</string>
    <string name="more">更多</string>
	<!-- 每日知识 -->
	<string name="knowledge_everyday">每日知识</string>
	<string name="knowledge_today">今日知识</string>
    <!-- 写笔记 -->
    <string name="notebook_toptitle">随题笔记</string>
    <string name="notebook_write_hint">写入您的笔记</string>
    <string name="notebook_notice">已输入 0/1000</string>
    <string name="notebook_submit">提交</string>
	
    <string name="reloadMsg">亲，连接服务器受阻!</string>
    <!--  -->
    <string name="toptitle_record">做题记录</string>
    <string name="toptitle_notebook">做题笔记</string>
    <string name="toptile_error">错题集</string>
    <string name="error_follow_exam">按科目显示</string>
    <string name="error_forget_line">遗忘曲线</string>
    <string name="error_frequent">出错频率</string>

    <!-- 考试资讯等 -->
    <string name="exam_information">考试资讯</string>
    <string name="exam_experience">备考经验</string>
    <string name="exam_outline">考试大纲</string>
    <string name="exam_teacher">名师指点</string>
    <string name="exam_guide">报考指南</string>
    <string name="exam_review">复习指导</string>

    <!-- title -->
    <string name="my_notebookStr">我的笔记</string>
    <string name="errorQuesitionStr">错题集</string>
    <string name="my_favoriteStr">我的收藏</string>
    
    <string name="last_exam">进入上一次练习</string>
    <string name="begin_practice">开 始 练 习</string>
    <string name="show_answer">显 示 答 案</string>

        <item name="tag_first" type="id"></item>
        <item name="tag_second" type="id"></item>

    <!-- 关于 -->
    <string name="version_name">1.0</string>
    <string name="website">http://www.cyedu.org</string>
    <string name="telephone">4000 525 585</string>
    <string name="company_name"> 会计从业资格考试网(cyedu.org) </string>
    <string name="right_info">Copyright © 2007&#8211;2013 All Rights Reserved.</string>
    <!--  -->
    <string name="main_title">考试一点通</string>
    <string name="area_version_name">全国版</string>
    <!-- 错误报告发送的邮箱账户 -->
    <string name="reportSendAccount">fw121fw4@163.com</string>
    <!-- 分享  -->
    <string name="share_img_code_text">"扫描二维码,下载应用"</string>
   	<string name="share_txt_wechat">微信</string>
    <string name="share_txt_pengyou">朋友圈</string>
    <string name="share_txt_sina">新浪微博</string>
    <string name="share_txt_qzone">QQ</string>
    <string name="share_txt_tencent">腾讯微博</string>
    <string name="share_txt_douban">豆瓣</string>
    <string name="share_txt_renren">人人网</string>
    <string name="share_txt_other">其他</string>
    <string name="share_content">会计证考试一点通，通过考试更轻松(http://www.cyedu.org/)</string>
    <string name="share_content_url">http://www.cyedu.org/</string>
    <string name="buy_url">http://www.cyedu.org/</string>
</resources>