<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/none"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <Button
        android:id="@+id/exitExamBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/exit_exam_btn1_bg"
        android:text="@string/exam_exitBtnStr"
        android:textColor="@color/localbule"
        android:textSize="@dimen/text_small_size" />

    <Button
        android:id="@+id/exitSubmitExamBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/exit_exam_btn1_bg"
        android:text="@string/exam_exitSubmitBtnStr"
        android:textColor="@color/localbule"
        android:textSize="@dimen/text_small_size" />

    <Button
        android:id="@+id/exitCancelExamBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5.0dip"
        android:layout_marginLeft="20.0dip"
        android:layout_marginRight="20.0dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/exit_exam_btn1_bg"
        android:text="@string/exam_exitCancelStr"
        android:textColor="@color/localbule"
        android:textSize="@dimen/text_small_size" />
</LinearLayout>