<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settime"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffeeee"
    android:orientation="vertical" >

    <include
        android:id="@+id/topTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/top_head" />
    <ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/c_home_background" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10.0dip" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_outline"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/dagang"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"
			    android:text="@string/exam_outline"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_guide"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/fangdajing"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"
			    android:text="@string/exam_guide"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
			<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_imformation"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/information_zx"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"
			    android:text="@string/exam_information"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
			<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_review"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/yaoshi"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"
			    android:text="@string/exam_review"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
			<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_experience"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/hongxin"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"
			    android:text="@string/exam_experience"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
			<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" >
			<TextView 
			    android:id="@+id/txt_teacher"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:drawableLeft="@drawable/dengpao"
			    android:drawablePadding="40.0dip"
			    android:paddingLeft="40dip"
				android:paddingTop="10.0dip"
				android:paddingBottom="10.0dip"			    
			    android:text="@string/exam_teacher"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
			<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="10.0dip"
            android:background="@drawable/bg_frame_setting"
            android:orientation="vertical"
            android:padding="1.0dip" 
            android:visibility="gone"
            >
			<TextView 
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="@drawable/layout_selector_background"
			    android:layout_gravity="center"
			    android:drawableLeft="@drawable/dagang"
			    android:drawablePadding="40.0dip"
			    android:padding="10.0dip"
			    android:layout_marginLeft="-10.0dip"
			    android:text="购买"
			    android:textColor="@color/black" 
			    android:textSize="@dimen/title_medium_size"
			    />
			</LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>