<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/doexam_mode4layout" android:background="@color/none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="5.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:id="@+id/exam_Content4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
    <GridView android:id="@+id/decadeNumGridView" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:numColumns="10" />
    <GridView android:layout_gravity="center_horizontal" android:id="@+id/theUnitNumGridView" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:numColumns="10" />
    <LinearLayout android:orientation="vertical" android:id="@+id/exam_answer_layout4" android:background="@drawable/answer_layout_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="5.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/exam_myAnswerStr" />
                <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:id="@+id/myAnswerTextView4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/exam_sysAnswerStr" />
                <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:id="@+id/sysAnswerTextView4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:background="@color/Camblue" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exam_analysisStr" />
            <TextView android:textSize="@dimen/text_medium_size" android:textColor="@color/black" android:id="@+id/exam_analysisTextView4" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <ListView android:id="@+id/exam_ListView4" android:visibility="gone" android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:cacheColorHint="@color/none" android:divider="@color/white" />
</LinearLayout>
